[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD/induction/induction.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://HUD/lifebar_fill.png" type="Texture" id=3]
[ext_resource path="res://HUD/lifebar_bg.png" type="Texture" id=4]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 396, 53 )
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 396, 53 )
axis_stretch_horizontal = 2

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="WeaponConteiner" type="VBoxContainer" parent="."]
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 0.98
anchor_bottom = 0.98
margin_left = -224.0
margin_top = -175.0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GranadeContainer" type="HBoxContainer" parent="WeaponConteiner"]
margin_right = 224.0
margin_bottom = 64.0
size_flags_vertical = 0
alignment = 2

[node name="GranadeLabel" type="Label" parent="WeaponConteiner/GranadeContainer"]
margin_left = 100.0
margin_top = 12.0
margin_right = 156.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "12"

[node name="GranadeTexture" type="TextureRect" parent="WeaponConteiner/GranadeContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="WeaponTexture" type="TextureRect" parent="WeaponConteiner"]
margin_left = 80.0
margin_top = 68.0
margin_right = 144.0
margin_bottom = 132.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="AmmoLabel" type="Label" parent="WeaponConteiner"]
margin_top = 136.0
margin_right = 224.0
margin_bottom = 175.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "100/100"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.02
anchor_bottom = 0.02
margin_right = 395.0
margin_bottom = 63.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
